5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4365/executions/1649_2704.log
== SUBMITION (2019-04-16 14:50:38) 
-- CODE:
nota= float(input("nota do aluno:"))
boni= input("o aluno tem bonificacao"))
if boni.upper() == "s":		
	print(nota+10/100*nota)
else: 
	print(nota)
	
-- EXECUTION TIME:
0.186263
-- ERROR:
  File "/home/codebench/codes/1649/2704/main.py", line 2
    boni= input())
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:50:53) 
-- CODE:
nota= float(input("nota do aluno:"))
boni= input("o aluno tem bonificacao"))
if boni.upper() == "s":
	print(nota+10/100*nota)
else: 
	print(nota)
	
-- EXECUTION TIME:
0.149358
-- ERROR:
  File "/home/codebench/codes/1649/2704/main.py", line 2
    boni= input())
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:43:18) 
-- CODE:
nota= float(input("nota do aluno:"))
boni= input("o aluno tem bonificacao"))
if boni.upper() == "s":
	print(nota+10/100*nota)
else: 
	print(nota)
	
-- ERROR:
File "XXXX", line 2
    boni= input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:44:57) 
-- CODE:
nota= float(input("nota do aluno:"))
boni= input("o aluno tem bonificacao"))
if (boni.upper()) == "s":
	print(nota+10/100*nota)
else: 
	print(nota)
	
-- EXECUTION TIME:
0.150615
-- ERROR:
  File "/home/codebench/codes/1649/2704/main.py", line 2
    boni= input())
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:45:47) 
-- CODE:
nota= float(input("nota do aluno:"))
boni= input("o aluno tem bonificacao"))
if (boni.upper())== "s":
	print(nota+10/100 * nota)
else: 
	print(nota)
	
-- EXECUTION TIME:
0.171344
-- ERROR:
  File "/home/codebench/codes/1649/2704/main.py", line 2
    boni= input("o aluno tem bonificacao"))
                                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:50:45) 
-- CODE:
nota= float(input("nota do aluno:"))
boni=input("o aluno tem bonificacao :")
if boni.upper()== "S":
	print(nota + 10/100 * nota)
else:
	print(nota)


	
-- EXECUTION TIME:
0.131634
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
